# GameEngine

./: .gitignore  CMakeLists.txt  GameEngine.cpp  GameEngine.h  Image.h  README.md  Screen.cpp  Screen.h  Shape.cpp  Shape.h  stim-math.tga
resources/: stim-it.tga
src/: Camera.cpp  Camera.h  Game.cpp  Game.h  GameEngine.cpp  GameEngine.h  Image.cpp  Image.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Screen.cpp  Screen.h  Shader.cpp  Shader.h  Shape.cpp  Shape.h  Texture.cpp  Texture.h
src/Shaders/: cellshade.fs.glsl  framebuffer.fs.glsl  lampfrag.fs.glsl  model.fs.glsl  model.vs.glsl  voxel.fs.glsl  voxel.gs.glsl  voxel.vs.glsl
